# gamma-launcher

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  default.nix  gamma-launcher.desktop  pyproject.toml  setup.py
.github/scripts/: release.sh
.github/workflows/: build-nuitka-mac-linux-windows.yaml  build-pyinstaller-mac-linux-windows.yaml  python-package.yml  release.yml
debian/: changelog  control  rules
easy-install/: Makefile  README.md  gamma-launcher
launcher/: __init__.py  __version__.py  archive.py  bootstrap.py  cli.py  common.py  compat.py  exceptions.py  gui.py  hash.py  meta.py  tempfile.py
launcher/commands/: __init__.py  check.py  common.py  install.py  shader.py  tests.py  usvfs.py
launcher/downloader/: __init__.py  base.py  github.py  moddb.py
launcher/mods/: __init__.py  archive.py  base.py  git.py  info.py  large_file.py  separator.py  tempfile.py
launcher/mods/downloader/: __init__.py  base.py  github.py  moddb.py
launcher/mods/downloader/github/: git.py  legacy.py
launcher/mods/installer/: __init__.py  base.py  default.py  git.py  separator.py
tests/: common.py  test_archive.py  test_hash.py  test_mods.py  test_mods_downloader.py  test_mods_downloader_base.py  test_mods_downloader_moddb.py  test_mods_info.py  test_tempfile.py
tests/data/: moddb-dl-start.htm  moddb-stalker-anomaly-page-minimal.htm  test-bcj2-filter.7z  test-malformed-both.7z  test-malformed-case.7z  test-malformed-path.7z  test.7z  test.rar
tests/data/modpack_test/: modlist.txt  modpack_maker_list.txt
